--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
-    "vue-material": "^1.0.0-beta-10.2"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
