--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.8.1",
+    "v-calendar": "^0.9.7",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
     "vue-material": "^1.0.0-beta-10.2",
