--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.8.1",
+    "materialize-css": "^1.0.0-rc.2",
     "v-calendar": "^0.9.7",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-eslint": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
+    "ember-cli-materialize": "^0.22.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
