--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "date-fns": "^1.30.1",
     "firebase": "^5.8.1",
     "materialize-css": "^1.0.0-rc.2",
     "v-calendar": "^0.9.7",
