--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "date-fns": "^1.30.1",
     "firebase": "^5.8.1",
     "materialize-css": "^1.0.0-rc.2",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "v-calendar": "^0.9.7",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
