--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "swup": "^1.7.19",
     "v-calendar": "^0.9.7",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
