--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "date-fns": "^1.30.1",
     "firebase": "^5.8.1",
     "materialize-css": "^1.0.0-rc.2",
